--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,64 +6,60 @@
 
 html {
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
-  background: #333;
-  color: whitesmoke;
+  background: #F8F8F8;
+  color: black;
 }
 
-body {
-  min-height: 100vh;
-  font-size: 1.5rem;
-  padding: 0 10% 10%;
+h2{
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+  color: #FFFFFF;
+  margin-left: 54px;
 }
 
-input,
-textarea,
-button,
-select {
-  font: inherit;
-  margin-bottom: 1em;
+h4{
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 900;
+  font-size: 32px;
+  line-height: 38px;
+  color: #FFFFFF;
+  margin-left: 15px;
 }
 
-main {
-  max-width: 500px;
-  margin: auto;
+p{
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 23px;
+  color: #FFFFFF;
+  margin-left: 15px;
+
 }
 
-section {
-  margin-top: 1em;
+
+h6{
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 28px;
+  letter-spacing: 0.15em;
+  color: #FFFFFF;
 }
 
-article {
-  margin: 0.5em 0.5em 0.5em 0;
-  border: 1px solid whitesmoke;
-  border-radius: 10px;
-  padding: 1em;
+h3{
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 19px;
+  margin-top: 5px;
+  letter-spacing: 0.15em;
+  color: #FFFFFF;
 }
 
-h1 {
-  font-size: 3.5rem;
-}
-
-p {
-  font-family: Arial, Helvetica, sans-serif;
-  line-height: 1.4;
-  font-size: 1.2rem;
-  margin: 0.5em 0;
-}
-
-form {
-  display: flex;
-  flex-direction: column;
-}
-
-.postCredit {
-  font-size: 1rem;
-}
-
-.reactionButton {
-  margin: 0 0.25em 0 0;
-  background: transparent;
-  border: none;
-  color: whitesmoke;
-  font-size: 1rem;
-}
