--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,7 +16,7 @@ h2{
   font-weight: 500;
   font-size: 14px;
   line-height: 16px;
-  color: #FFFFFF;
+  color: #14110F;
   margin-left: 54px;
 }
 
@@ -27,7 +27,7 @@ h4{
   font-size: 32px;
   line-height: 38px;
   color: #FFFFFF;
-  margin-left: 15px;
+  /*margin-left: 15px;*/
 }
 
 p{
@@ -62,4 +62,5 @@ h3{
   letter-spacing: 0.15em;
   color: #FFFFFF;
 }
+
 
